..F....... [ZBXNEXT-583] added the maintenance filter to the trigger status page (Pavels)
A......... [ZBX-5351] implemented the "selectTimeperiods" parameter for the maintenance.get method (Pavels)
..F....... [ZBX-4972] added the ability to edit map links in the element mass update form (Pavels)

Bug fixes:
..F....... [ZBX-5466] fixed dependency adding when copying triggers to host and when full cloning host (Toms)
..F....... [ZBX-5466] removed that triggers with HTTP items not copied when copying triggers to hosts (Toms)
A......... [ZBX-5466] improved warning message for trigger circular dependencies (Toms)
A......... [ZBX-5466] fixed warning message which missed template name, when linking template to a host, when there were dependencies from that template to other template which were not linked to that host (Toms)
A.F....... [ZBX-4316] improved message for web step status code validation error, added validation in api (Vedmak)
..F....... [ZBX-5445] fixed hint not removed in dashboard when widget content is refreshed (Vedmak)
..F....... [ZBX-5490] fixed textarea maxlength validation (Eduard)
A......... [ZBX-5461] fixed error when create trigger prototype on PHP 5.1 (Vedmak)
..F....... [ZBX-5487] fixed sorting in dashboard system status and host status widget popups (Vedmak)
..F....... [ZBX-5480] fixed icon default state for host elements in map (Eduard)
....I..... [ZBX-5479] removed inode item prototype from OS Windows template (Sasha)
........S. [ZBX-5235] fixed update of a "lifetime" field if link a template to a host (Sasha)
..F....... [ZBX-4025] fixed duplicate http step names cheking (Eduard)
.......PS. [ZBX-5240] fixed unwanted server shutdown if housekeeper cannot access MySQL database (Andris)
..F....... [ZBX-4482] fixed guest user theme not applied (Toms)
..F....... [ZBX-5441] fixed audit logging when adding IT service causing notice message and wrong audit log (Toms)